better js error message on out of memory SERVER-2280